dongmyeong-port view_s mobile upload

--- a/src/template_m/about/_contents_about_m.html
+++ b/src/template_m/about/_contents_about_m.html
@@ -2,7 +2,7 @@
 "siteName": "@@siteName",
 "imgPath":"@@imgPath",
 "baseCssPath":"@@baseCssPath",
-"pathCss": "about/init_m.css",
+"pathCss": "@@domain/about/init_m.css",
 "isPageMenu" : "true",
 "localName": "@@localName"
 })
