--- a/src/template_m/waycome/_contents_waycome_m.html
+++ b/src/template_m/waycome/_contents_waycome_m.html
@@ -1,13 +1,13 @@
 @@include('../include/_head_top.html',{
-    "siteName": "@@siteName",
-    "imgPath":"@@imgPath",
-    "baseCssPath":"@@baseCssPath",
-    "pathCss": "waycome/init_m.css",
-    "isPageMenu" : "true",
-    "localName" : "@@localName"
+"siteName": "@@siteName",
+"imgPath":"@@imgPath",
+"baseCssPath":"@@baseCssPath",
+"pathCss": "@@domain/waycome/init_m.css",
+"isPageMenu" : "true",
+"localName" : "@@localName"
 })
 <div class="contents">
-		
+
     <section class="wrap subVisual">
         <div class="mainTxt container">
             <p class="p-1">@@wayCome.ment</p>
@@ -30,29 +30,31 @@
                         </dd>
                     </dl>
                     <p class="p-1">대중교통 이용시</p>
-                    @@for(var i=0; i < wayCome.transport.length ;i++){
-                        <dl>
-                            <dt>`+ wayCome.transport[i].title +`</dt>
-                            <dd>
-                                <p class="dot">`+ wayCome.transport[i].step +`</p>
-                            </dd>
+                    @@for(var i=0; i < wayCome.transport.length ;i++){ <dl>
+                        <dt>`+ wayCome.transport[i].title +`</dt>
+                        <dd>
+                            <p class="dot">`+ wayCome.transport[i].step +`</p>
+                        </dd>
                         </dl>
-                    }
-                    <p class="row-btn">
-                        <a href="@@wayCome.naverMap" target="_blank"><img src="http://img.sampobeach.co.kr/waycome/btn_n.png" alt="네이버지도보기"></a><a href="@@wayCome.kakaoMap" target="_blank"><img src="http://img.sampobeach.co.kr/waycome/btn_d.png" alt="다음지도보기"></a>
-                    </p>
+                        }
+                        <p class="row-btn">
+                            <a href="@@wayCome.naverMap" target="_blank"><img
+                                    src="http://img.sampobeach.co.kr/waycome/btn_n.png" alt="네이버지도보기"></a><a
+                                href="@@wayCome.kakaoMap" target="_blank"><img
+                                    src="http://img.sampobeach.co.kr/waycome/btn_d.png" alt="다음지도보기"></a>
+                        </p>
                 </div>
             </div>
         </div>
     </section>
-    
+
 </div>
 @@include('../include/_bottom.html',{
-    "siteName": "@@siteName",
-    "siteNameEN": "@@siteNameEN",
-    "imgPath":"@@imgPath",
-    "address" : "@@wayCome.address",
-    "josaLeul" : "@@josaLeul",
-    "domain": "@@domain",
-    "dotPath": ".."
+"siteName": "@@siteName",
+"siteNameEN": "@@siteNameEN",
+"imgPath":"@@imgPath",
+"address" : "@@wayCome.address",
+"josaLeul" : "@@josaLeul",
+"domain": "@@domain",
+"dotPath": ".."
 })
