tourist yeongrang-lake upload test

--- a/src/template_m/waycome/_contents_waycome_m.html
+++ b/src/template_m/waycome/_contents_waycome_m.html
@@ -25,7 +25,7 @@
                     <dl>
                         <dt class="skip"></dt>
                         <dd>
-                            <p class="dot">차량 네비게이션에서 <span class="c-blue f-bd">@@siteName</span>을 입력</p>
+                            <p class="dot">차량 네비게이션에서 <span class="c-blue f-bd">@@siteName</span>를 입력</p>
                             <p class="dot"><span class="c-blue f-bd">@@wayCome.address</span> 주소를 입력</p>
                         </dd>
                     </dl>
