--- a/src/copy_temp/site_manager.html
+++ b/src/copy_temp/site_manager.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카피사이트 관리 test </title>
+    <title>카피사이트 관리 test 1234</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <style>
         *{
