--- a/src/template_m/tourist/_list/_list_temp.html
+++ b/src/template_m/tourist/_list/_list_temp.html
@@ -1,14 +1,14 @@
-@@for (var i = 0; i < list.length; i++) {
-    <li>
-        <figure class="tour-img"><img src="http://design.ebiznetworks.co.kr/lhc/tourist-incheon/img/somuui-do.co.kr/tourist/`+list[i].imgName+`" alt="@@listName"></figure>
-        <dl class="txt-box">
-            <dt class="txt-title">
-                <h4>`+ list[i].title +`</h4>
-                <p> `+ list[i].address +`</p>
-            </dt>
-            <dd class="txt-contents">
-                `+ list[i].text +`
-            </dd>
-        </dl>
+@@for (var i = 0; i < list.length; i++) { <li>
+    <figure class="tour-img"><img src="http://img.sampobeach.co.kr/tourist/`+list[i].imgName+`" alt="@@listName">
+    </figure>
+    <dl class="txt-box">
+        <dt class="txt-title">
+            <h4>`+ list[i].title +`</h4>
+            <p> `+ list[i].address +`</p>
+        </dt>
+        <dd class="txt-contents">
+            `+ list[i].text +`
+        </dd>
+    </dl>
     </li>
-}
+    }
